[package]
name = "tako-server-pt"
version = "1.1.2"
edition = "2024"
description = "Internal thread-per-core server bootstrap for tako-rs (not published)."
license = "MIT"
repository = "https://github.com/rust-dd/tako"
authors = ["Daniel Boros <dancixx@gmail.com>"]
publish = false

[lib]
name = "tako_server_pt"
path = "src/lib.rs"
doctest = false

[dependencies]
tako-core = { path = "../tako-core" }
tako-core-local = { path = "../tako-core-local", optional = true }

futures-util = "0.3.31"
hyper = { version = "1.6.0", features = ["full"] }
hyper-util = { version = "0.1.14", features = ["tokio"] }
socket2 = { version = "0.5", features = ["all"] }
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.41"

# Optional CPU pinning
core_affinity = { version = "0.8", optional = true }

# Optional compio runtime (io_uring on Linux, IOCP on Windows, kqueue on macOS).
compio = { version = "0.17.0", features = ["macros", "rustls"], optional = true }
cyper-core = { version = "0.7.0", optional = true }
send_wrapper = { version = "0.6", optional = true }

[features]
default = ["affinity"]
affinity = ["dep:core_affinity"]
signals = ["tako-core/signals"]
local = ["dep:tako-core-local"]
# The compio crate is enabled directly here without flipping `tako-core/compio`,
# because that core feature globally switches signals/queue to compio spawn,
# which conflicts with the existing tokio-based `tako_server::serve` path.
compio = ["dep:compio", "dep:cyper-core", "dep:send_wrapper"]
compio-local = ["compio", "local"]
