[package]
name = "tako-server"
version = "1.1.2"
edition = "2024"
description = "Internal server bootstrap for tako-rs (not published)."
license = "MIT"
repository = "https://github.com/rust-dd/tako"
authors = ["Daniel Boros <dancixx@gmail.com>"]
publish = false

[lib]
name = "tako_server"
path = "src/lib.rs"
doctest = false

[dependencies]
tako-core = { path = "../tako-core" }

anyhow = "1.0.98"
bytes = "1.10.1"
futures-util = "0.3.31"
http = "1.3.1"
http-body-util = "0.1.3"
hyper = { version = "1.6.0", features = ["full"] }
hyper-util = { version = "0.1.14", features = ["tokio"] }
pin-project-lite = "0.2.16"
tokio = { version = "1.48.0", features = ["full"] }
tokio-stream = "0.1.17"
tokio-util = { version = "0.7.15", features = ["compat"] }
tracing = "0.1.41"

# Optional, feature-gated network/runtime backends
compio = { version = "0.17.0", features = ["macros", "rustls"], optional = true }
cyper-core = { version = "0.7.0", optional = true }
send_wrapper = { version = "0.6", optional = true }
rustls = { version = "0.23.28", optional = true }
rustls-pemfile = { version = "2.2.0", optional = true }
tokio-rustls = { version = "0.26.2", optional = true }
h3 = { version = "0.0.8", optional = true }
h3-quinn = { version = "0.0.10", optional = true }
quinn = { version = "0.11.9", optional = true }

[features]
default = []
signals = ["tako-core/signals"]
tls = ["dep:tokio-rustls", "dep:rustls", "dep:rustls-pemfile"]
http2 = []
http3 = ["dep:h3", "dep:h3-quinn", "dep:quinn", "dep:rustls", "dep:rustls-pemfile"]
compio = ["dep:compio", "dep:cyper-core", "dep:send_wrapper", "tako-core/compio"]
compio-tls = ["compio", "tls"]
# Forwarded so cfg-gated PROXY-protocol code can compile when plugins is enabled.
plugins = []
