[package]
name = "tako-streams"
version = "1.1.2"
edition = "2024"
description = "Internal stream/upgrade transports for tako-rs (not published)."
license = "MIT"
repository = "https://github.com/rust-dd/tako"
authors = ["Daniel Boros <dancixx@gmail.com>"]
publish = false

[lib]
name = "tako_streams"
path = "src/lib.rs"
doctest = false

[dependencies]
tako-core = { path = "../tako-core" }
tako-server = { path = "../tako-server" }

anyhow = "1.0.98"
base64 = "0.22.1"
bytes = "1.10.1"
futures-util = "0.3.31"
http = "1.3.1"
http-body = "1.0.1"
http-body-util = "0.1.3"
hyper = { version = "1.6.0", features = ["full"] }
hyper-util = { version = "0.1.14", features = ["tokio"] }
mime = "0.3.17"
mime_guess = "2.0.5"
sha1 = "0.10.6"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.48.0", features = ["full"] }
tokio-stream = "0.1.17"
tokio-tungstenite = "0.27.0"
tokio-util = { version = "0.7.15", features = ["compat"] }
tracing = "0.1.41"
url = "2.5.4"
pin-project-lite = "0.2.16"

# Optional / feature-gated
compio = { version = "0.17.0", features = ["macros", "rustls"], optional = true }
compio-ws = { version = "0.2.0", optional = true }
compio-io = { version = "0.8.4", optional = true }
compio-buf = { version = "0.7.1", optional = true }
send_wrapper = { version = "0.6", optional = true }
h3 = { version = "0.0.8", optional = true }
h3-quinn = { version = "0.0.10", optional = true }
quinn = { version = "0.11.9", optional = true }
rustls = { version = "0.23.28", optional = true }
rustls-pemfile = { version = "2.2.0", optional = true }

[features]
default = []
file-stream = []
plugins = []
signals = ["tako-core/signals"]
compio = ["dep:compio", "dep:send_wrapper", "tako-core/compio", "tako-server/compio"]
compio-ws = ["compio", "dep:compio-ws", "dep:compio-io", "dep:compio-buf"]
http3 = ["dep:h3", "dep:h3-quinn", "dep:quinn", "dep:rustls", "dep:rustls-pemfile", "tako-server/http3"]
webtransport = ["http3"]
