[package]
name = "tako-streams"
description = "Internal stream/upgrade transports for tako-rs. Use the `tako-rs` umbrella crate instead."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
documentation = "https://docs.rs/tako-streams"
homepage = "https://github.com/rust-dd/tako"
readme = "../README.md"

[lib]
name = "tako_streams"
path = "src/lib.rs"
doctest = false

[dependencies]
tako-core.workspace = true

anyhow.workspace = true
base64.workspace = true
bytes.workspace = true
futures-util.workspace = true
http.workspace = true
http-body.workspace = true
http-body-util.workspace = true
httpdate.workspace = true
hyper.workspace = true
hyper-util.workspace = true
mime.workspace = true
mime_guess.workspace = true
pin-project-lite.workspace = true
sha1.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
tokio-util.workspace = true
tracing.workspace = true
url.workspace = true

# Optional / feature-gated
compio = { workspace = true, optional = true }
quinn = { workspace = true, optional = true }
rustls = { workspace = true, optional = true }

[features]
default = []
file-stream = []
plugins = []
signals = ["tako-core/signals"]
compio = ["dep:compio", "tako-core/compio"]
compio-ws = ["compio", "compio/io", "compio/ws"]
http3 = ["dep:quinn", "dep:rustls", "tako-core/http3"]
webtransport = ["http3"]

[lints]
workspace = true
