[package]
name = "graphql-generic-ws"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
async-graphql = "7.0.17"
base64 = "0.22"
futures-util = "0.3"
http = "1"
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["tokio"] }
sha1 = "0.10"
tako-rs = { path = "../..", features = ["async-graphql", "graphiql"] }
tokio = { version = "1.45.1", features = ["full"] }
tokio-tungstenite = "0.27"
