[package]
name = "openapi-utoipa-example"
version = "0.1.0"
edition = "2024"

[dependencies]
http = "1"
tako-rs = { path = "../../tako-rs", features = ["utoipa"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
utoipa = { version = "5.4", features = ["macros"] }

[workspace]
